# BT_Engine

./: .gitignore  README.md
webapp/nav2/: .gitignore  README.md  app.py  bt_validation.py  catalog_io.py  inference.py  json_to_xml.py  model_registry.py  nav2_pipeline.py  prompting.py  pyproject.toml  requirements.txt  ros_nav2_client.py  run_artifacts.py  steps_parsing.py
webapp/nav2/constraints/: __init__.py  steps_jsonschema.py  steps_prefix_fn.py  xml_prefix_fn.py
webapp/nav2/data/: bt_nodes_catalog.json
webapp/nav2/data/reference_behavior_trees/: navigate_then_spin.xml
webapp/nav2/scripts/: test_hf_inference.py
webapp/nav2/static/: app.js  style.css
webapp/nav2/templates/: index.html
webapp/nav2_xml/: .gitignore  README.md  app.py  inference.py  nav2_pipeline.py  prompting.py  pyproject.toml  requirements.txt  ros_nav2_client.py  xml_extraction.py
webapp/nav2_xml/data/: bt_nodes_catalog.json
webapp/nav2_xml/static/: app.js  style.css
webapp/nav2_xml/templates/: index.html
